--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,6 +32,7 @@ p {
     margin: 0;
     font-size: 1rem;
     line-height: 25px;
+    text-align: center;
 }
 
 
@@ -78,7 +79,7 @@ a:hover {
 }
 
 .about-link {
-    color: #e9ecef;
+    color:#89c2d9;
 }
 
 .fa-phone,
@@ -215,18 +216,24 @@ body {
     margin: 40px 0px 0px 50px;
     width: 80%;
     border-radius: 20px;
-    height: 365px;
+    height: 665px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
   }
   
   .About-content {
+    display: flex;
+    flex-wrap: wrap;
+    
+    justify-content: center;
       width: 80%;
   }
   
   .about-img {
       border-radius: 20px;
-      width: 50%;
+      width: 100%;
+      height: 350px;
       object-fit: cover;
   }
   
@@ -301,6 +308,7 @@ body {
 .review-cards .card {
   width: 30%;
   background-color: var(--card-color);
+ 
 }
 
 /*******  footer-section  ********/
