--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,6 +26,8 @@ h2 {
 h3 {
      margin: 0;
     font-size: 1.25rem;
+    margin-bottom: 5px;
+    text-align: center;
 }
 
 p {
@@ -43,6 +45,7 @@ p {
     height: 30px;
     border-radius: 5px;
     border: 0;
+    background-color: var(--main-color);
 }
 
 .btn {
@@ -150,7 +153,7 @@ body {
 
 .hero-content {
     padding: 10px;
-    background-color: #e9ecef;
+    background-color: #f8f9fa;
     border-radius: 5px;
     position: absolute;
     left: 514px;
@@ -225,9 +228,8 @@ body {
   .About-content {
     display: flex;
     flex-wrap: wrap;
-    
     justify-content: center;
-      width: 80%;
+    width: 80%;
   }
   
   .about-img {
@@ -291,25 +293,30 @@ body {
     background-color: var(--main-color);
     width: 50%;
     border-radius: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .reviews-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 91%;
 }
 
-.review-cards {
+.faq-cards {
     display: flex;
     justify-content: center;
+    gap: 10px;
+    
 }
 
-.review-cards .card {
-  width: 30%;
+.faq-cards .card {
+  width: 100%;
   background-color: var(--card-color);
- 
+  border-radius: 5px;
 }
+
 
 /*******  footer-section  ********/
 
@@ -324,7 +331,12 @@ body {
     flex-wrap: wrap;
 }
 
+.contact h3 {
+    text-align: left;
+}
+
 .contact-items ul {
+    
     list-style: none;
     padding-left: 5px;
     font-size: 1rem;
@@ -337,3 +349,17 @@ body {
 
 
 
+/*****  media-query  *****/
+
+@media screen and (max-width: 480px) {
+    
+    .nav-header{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .hero-container {
+        display: flex;
+        flex-direction: column;
+    }
+}
