updating html and css

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -45,12 +45,15 @@ p {
     height: 30px;
     border-radius: 5px;
     border: 0;
-    background-color: var(--main-color);
+    background-color: var(--card-color);
+    cursor: pointer;
+    box-shadow:0px 10px 16px lightgray;
 }
 
 .btn {
     display: flex;
     justify-content: center;
+   
 }
 
 
@@ -291,11 +294,11 @@ body {
     margin: 0px 0px 60px 50px;
     padding: 20px;
     background-color: var(--main-color);
-    width: 50%;
     border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 .reviews-content {
@@ -314,7 +317,7 @@ body {
 .faq-cards .card {
   width: 100%;
   background-color: var(--card-color);
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 
@@ -336,7 +339,6 @@ body {
 }
 
 .contact-items ul {
-    
     list-style: none;
     padding-left: 5px;
     font-size: 1rem;
