--- a/public/css/main.css
+++ b/public/css/main.css
@@ -53,7 +53,6 @@ p {
 .btn {
     display: flex;
     justify-content: center;
-   
 }
 
 
@@ -175,8 +174,8 @@ body {
 
 .Attractions-container {
     border-radius: 20px 20px 20px 20px;
-    width: 60%;
-    margin:40px ;
+    width: 70%;
+    margin:40px 50px 40px 50px ;
     background-color: var(--main-color);
 }
 
@@ -248,9 +247,10 @@ body {
 .Accommodation-container {
     background-color: var(--main-color);
     padding: 20px;
-    width: 91%;
+    width: 90%;
     border-radius: 20px;
-    margin: 0px 50px 60px 50px;
+    margin: 100px 50px 60px 50px;
+    height: 350px;
 }
 
 .Accommodation-content {
@@ -263,7 +263,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
 }
 
 .Accomm-cards .card {
@@ -280,45 +280,41 @@ body {
 .card-image {
     border-radius: 15px 15px 0px 0px ;
     width: 100%;
-    height: 120px;
+    height: 160px;
     object-fit: cover;
 }
 
 
 /*******  review  *******/
-.Accommodation-and-review {
-    display: flex;
-}
 
 .reviews-container {
-    margin: 0px 0px 60px 50px;
+    margin: 100px 50px 40px 50px;
     padding: 20px;
     background-color: var(--main-color);
     border-radius: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: center;
+    height: 250px;
 }
 
 .reviews-content {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
 }
 
 .faq-cards {
+    padding-top: 20px;
     display: flex;
     justify-content: center;
-    gap: 10px;
-    
+    gap: 30px;
 }
 
 .faq-cards .card {
   width: 100%;
   background-color: var(--card-color);
   border-radius: 10px;
+  height: 150px;
+  padding:10px ;
 }
+
 
 
 /*******  footer-section  ********/
