--- a/public/css/main.css
+++ b/public/css/main.css
@@ -313,6 +313,7 @@ body {
 
 
 
+
 /********  Accommodation  *******/
 
 .Accommodation-container {
@@ -444,6 +445,10 @@ body {
     height: 150px;
 }
 
+/****  contact  ***/
+
+
+
 
 /*******  footer-section  ********/
 
@@ -476,20 +481,114 @@ body {
     align-items: center;
 }
 
+/*******  footer-section  ********/
+
 
 
 /*****  media-query  *****/
 
 @media screen and (max-width: 480px) {
 
+    /*** typeography ***/
+
+    h1 {
+        margin-top: 10px;
+    }
+
+    /*** typeography ***/
+
+/**** components ****/
+
     input {
         display: flex;
     }
+
+    a {
+        text-align: center;
+    }
+
+    .nav-items a {
+        font-size: 16px;
+    }
+
+    .nav-items ul {
+        margin-left: -27px;
+        display: flex;
+        justify-content: end;
+    }
+
+.ham-burger {
+    width: 60px;
+    height: 50px;
+    background-color: transparent;
+    border: none;
+    position: relative;
+    bottom: 100px;
+    cursor: pointer;
+    padding: 15px;
+    left: -8px;
+}
+
+.burger-bar {
+  position: absolute;
+  width: 60%;
+  height: 5px;
+  background-color: #4682bb;
+  border-radius: 25px;
+  left: 39px;
+  bottom: 27px;
+  transform: translate(-50%, -50%);
+  transition: transform .9s, opacity .9s, top .6s;
+}
+
+.bar-center {
+  top: 7px;
+}
+
+.bar-bottom {
+  top: 29px;
+}
+
+.ham-burger.active .bar-top {
+  transform: translate(-50%, -50%) rotate(-315deg);
+  top: 28px;
+}
+
+.ham-burger.active .bar-center {
+  opacity: 0;
+}
+
+.ham-burger.active .bar-bottom {
+  transform: translate(-50%, -50%) rotate(-225deg);
+  top: 28px;
+}
+
+/**** components ****/
+
     
     .nav-header{
         display: flex;
         flex-direction: column;
     }
+
+    .left-screen-menu {
+    background-color: lightskyblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 374px;
+    height: 118px;
+    position: relative;
+    left: -379px;
+    top: -11px;
+    transition-property: left;
+    transition-duration: 1.1s;
+    transition-timing-function: ease-in-out;
+}
+
+.left-screen-menu.active {
+  left: 0;
+}
 
     .hero-container {
         display: flex;
